<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/borderBottomNav"
        tools:context=".ui.login.fragments.SignInOrSignUpFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@color/borderBottomNav"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageHelp"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_help"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintStart_toEndOf="@+id/imageLogo"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="363dp"
        android:layout_height="298dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_register_or_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textMotto"
        android:layout_width="312dp"
        android:layout_height="82dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:fontStyle="normal"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogin" />

    <TextView
        android:id="@+id/textMotto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/text1"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMotto" />

    <TextView
        android:id="@+id/textNoCont"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textContExist"
        android:textColor="@color/black"

        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMotto2" />

    <TextView
        android:id="@+id/textSignIn"
        android:layout_width="58dp"
        android:layout_height="25dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="3dp"
        android:text="@string/signIn"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textNoCont"
        app:layout_constraintStart_toStartOf="@+id/textNoCont"
        app:layout_constraintTop_toTopOf="@+id/textNoCont" />

    <ImageView
        android:id="@+id/btnSignUp"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/btn_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMotto2"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="59dp"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSignUp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toTopOf="@+id/btnSignUp"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>