<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/borderBottomNav"
        tools:context=".ui.login.fragments.SignInFragment">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="240dp"
        android:layout_height="72dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="42dp"
            android:fontFamily="sans-serif"
            android:fontStyle="normal"
            android:text="@string/signIn"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_logo"
            tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/field"
            android:hint="@string/textEmail"
            android:paddingStart="20dp"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            tools:ignore="RtlSymmetry,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_email"
            app:layout_constraintBottom_toBottomOf="@+id/textInputEmail"
            app:layout_constraintEnd_toEndOf="@+id/textInputEmail"
            app:layout_constraintTop_toTopOf="@+id/textInputEmail"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/tvEmailError"
            android:layout_width="0dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="24dp"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/circleErrorEmail"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
            app:layout_constraintTop_toTopOf="@+id/textInputEmail" />

        <ImageView
            android:id="@+id/circleErrorEmail"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmail"
            tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/field"
                android:hint="@string/textParola"
                android:paddingStart="20dp"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                tools:ignore="RtlSymmetry,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imagePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_password"
            app:layout_constraintBottom_toBottomOf="@+id/textInputPassword"
            app:layout_constraintEnd_toEndOf="@+id/textInputPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputPassword"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/tvPasswordError"
            android:layout_width="0dp"
            android:layout_height="17dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="74dp"
            android:layout_marginEnd="24dp"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circleErrorPassword"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
            app:layout_constraintTop_toTopOf="@+id/textInputPassword" />

        <ImageView
            android:id="@+id/circleErrorPassword"
            android:layout_width="11dp"
            android:layout_height="11dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/ic_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword"
            tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/btn"
            android:text="@string/textSignIn"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

        <TextView
            android:id="@+id/textNoCont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="44dp"
            android:text="@string/textCont"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="44dp"
            android:text="@string/signUp"
            android:textColor="@color/text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.238"
            app:layout_constraintStart_toEndOf="@+id/textNoCont"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>

